2008-11-21  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodebasemodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusmodule.vala:
	* vapi/dbus-glib-1.vapi:

	Add partial static D-Bus client support without dbus-glib
	marshalling

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_quark_try_string binding, patch by Rob Taylor

2008-11-21  Étienne Bersac  <bersace03@laposte.net>

	* vapi/gmodule-2.0.vapi:

	Add binding for G_MODULE_SUFFIX, fixes bug 561120

2008-11-21  Étienne Bersac  <bersace03@laposte.net>

	* vapi/glib-2.0.vapi:

	Add G_SEARCHPATH_SEPARATOR binding, fixes bug 561117

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/:

	Fix gdk_region_polygon and gdk_region_rectangle bindings,
	patch by Víctor Manuel Jáquez Leal, fixes bug 561655

	* vapi/gdk-2.0.vapi: regenerated

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* vapi/dbus-glib-1.vapi:

	Fix DBusError binding, patch by Sebastian Pölsterl,
	fixes bug 556340

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix g_hscale_new and g_vscale_new bindings,
	based on patch by Geert Jan Alsem, fixes bug 560053

	* vapi/gtk+-2.0.vapi: regenerated

2008-11-21  Étienne Bersac  <bersace03@laposte.net>

	* vapi/glib-2.0.vapi:

	Add g_strjoin binding, fixes bug 561124

2008-11-20  Jürg Billeter  <j@bitron.ch>

	* vala/valaassignment.vala:

	Check types in property assignments, fixes bug 550088

2008-11-20  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala:

	Fix generic catch clauses

2008-11-20  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodcallmodule.vala:

	Fix base access to virtual signal handlers with return values,
	fixes bug 538901

2008-11-20  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valacodevisitor.vala:
	* vala/valadynamicmethod.vala:
	* vala/valaflowanalyzer.vala:
	* vala/valagenieparser.vala:
	* vala/valamemberaccess.vala:
	* vala/valamethodcall.vala: