@@ -1,5 +1,13 @@
 2008-11-21  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valadbusclientmodule.vala:
+	* gobject/valadbusmodule.vala:
+
+	Support serialization and deserialization of arrays in static
+	D-Bus clients
+
+2008-11-21  Jürg Billeter  <j@bitron.ch>
+
 	* gobject/Makefile.am:
 	* gobject/valaccodebasemodule.vala:
 	* gobject/valadbusclientmodule.vala:
